@startuml
class Project {
    Long id
    String name
    Boolean isDeleted
    Long leaderId
    List<ProjectMember> projectMembers
    List<Issue> issues
}

class ProjectService {
    +ProjectResponseDto addMember(Long signId, Long projectId, ProjectMemberAddRequestDto projectMemberAddRequestDto)
}

class ProjectRepository {
    +Optional<Project> findByIdAndIsDeletedIsFalse(Long id)
}

class ProjectMember {
    Long id
    Member member
    Project project
    Boolean isDeleted
}

class ProjectMemberRepository {
    +boolean existsByMemberIdAndProjectIdAndIsDeletedFalse(Long memberId, Long projectId)
    +ProjectMember save(ProjectMember projectMember)
}

class DtoConverter {
    +ProjectResponseDto createProjectResponseDto(Project project)
}

ProjectService --> ProjectRepository
ProjectService --> ProjectMemberRepository
ProjectService --> DtoConverter
Project --> ProjectMember
Project --> Issue
ProjectMember --> Member
Issue --> Comment
@enduml
